--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ dependencies {
 
     testCompile "org.slf4j:slf4j-simple:+"
     testCompile "org.testcontainers:testcontainers:1.1.6"
+    testCompile "io.github.openfeign:feign-core:9.3.1"
+    testCompile 'org.assertj:assertj-core:3.5.2'
 }
 
 jar {
