--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,11 @@ repositories {
 dependencies {
     compile 'org.javassist:javassist:3.18.1-GA'
 
-    testCompile "org.slf4j:slf4j-simple:+"
+    testCompile 'ch.qos.logback:logback-classic:1.1.2'
     testCompile "org.testcontainers:testcontainers:1.1.6"
     testCompile "io.github.openfeign:feign-core:9.3.1"
     testCompile 'org.assertj:assertj-core:3.5.2'
+    testCompileOnly "org.projectlombok:lombok:1.16.10"
 }
 
 jar {
