--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ dependencies {
     testCompile "io.github.openfeign:feign-core:9.3.1"
     testCompile 'org.assertj:assertj-core:3.5.2'
     testCompileOnly "org.projectlombok:lombok:1.16.10"
+
+    // for Grapes and IDEA
+    testCompileOnly "org.codehaus.groovy:groovy-all:2.4.7"
+    testCompileOnly 'org.apache.ivy:ivy:2.4.0'
 }
 
 jar {
