--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ plugins {
 
 repositories {
     jcenter()
+
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    compile "net.bytebuddy:byte-buddy:1.5.6"
+    compile 'com.github.raphw:byte-buddy:3fcd3dceb6'
 
     compileOnly "com.sparkjava:spark-core:2.1"
 
